syntax = "proto3";

option go_package = "../../pb";

package pb;

message EventReq {
    string eventType = 1;
    string eventName = 2;
    map<string,string> eventData = 3;
}

message EventResp {
    string result = 1;
}

service Event {
    rpc Publish(EventReq) returns(EventResp);
}
